--- a/Webmp4/ClientApp/src/index.css
+++ b/Webmp4/ClientApp/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain) */
@@ -35,4 +37,8 @@
    }
    blockquote, q {
      quotes: none;
+   }
+
+   body {
+    font-family: 'Montserrat', sans-serif
    }
